# hdx-stable-schema

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: dev_pipeline.yaml
config/: .coveragerc  .pylintrc
src/hdx_stable_schema/: cli.py  data_preview.py  metadata_processor.py  utilities.py
tests/: test_data_preview.py  test_metadata_processor.py  test_utilities.py
tests/fixtures/: 2024-12-03-climada-litpop-dataset.json  2024-12-04-insecurity-insight-explosive-weapons.json  2024-12-06-geojson.json  2024-12-09-gibraltar-healthsites-resource.json  2024-12-09-gibraltar-healthsites-schemas.json  2024-12-09-gibraltar-healthsites.json  test_metadata_processor.py
