[project]
name = "hdx_stable_schema"
version = "2024.12.1"
description = "HDX experiments for stable schema"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {email = "ian.hopkinson@un.org"},
  {name = "Ian Hopkinson"}
]

dependencies = [
  "click",
  "requests==2.32.3",
  "libhxl==5.2.2",
  "fiona==1.10.1",
  "pandas==2.2.3",
  "geopandas=1.0.1",
  "openpyxl==3.1.5",
  "pytest",
  "pytest-cov",
  "black==23.10.0",
  "flake8",
  "pylint"
]

[project.scripts]
hdx-schema = "hdx_stable_schema.cli:hdx_schema"

[project.urls]
repository = "https://github.com/OCHA-DAP/hdx-stable-schema"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''